// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Menu matches the snapshot (menu with groups) 1`] = `
<DocumentFragment>
  .c0 {
  background-color: #FFFFFF;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius);
  box-shadow: 0 8px 16px 0 rgb(0 0 0 / 0.2);
  box-sizing: border-box;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
  max-height: calc(var(--spacing-half) + 128px);
  overflow-y: auto;
  padding: var(--spacing-half) 0;
  -webkit-scroll-behavior: smooth;
  -moz-scroll-behavior: smooth;
  -ms-scroll-behavior: smooth;
  scroll-behavior: smooth;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  gap: var(--spacing-1x);
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
}

.c2.eds-util-focus-visible,
.c2:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c2:hover {
  background-color: #DBDEE1;
  color: #000000;
}

.c2[disabled],
.c2[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c1 {
  color: #60666E;
  display: block;
  font-size: 0.75rem;
  line-height: 1.25rem;
  overflow: hidden;
  padding: var(--spacing-base) var(--spacing-2x) var(--spacing-half);
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c3 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
    class="c0"
    data-testid="menu"
    id="00000000-0000-0000-0000-000000000000"
    role="menu"
  >
    <div
      aria-labelledby="menu-group-0"
      role="group"
    >
      <span
        class="c1"
        id="menu-group-0"
      >
        Group 1
      </span>
      <button
        class="c2 eds-util-focus-visible"
        data-testid="sub-menu-option-0"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          class="c3"
        >
          Option 1.1
        </span>
      </button>
      <button
        class="c2"
        data-testid="sub-menu-option-1"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          class="c3"
        >
          Option 1.2
        </span>
      </button>
    </div>
    <div
      aria-labelledby="menu-group-1"
      role="group"
    >
      <span
        class="c1"
        id="menu-group-1"
      >
        Group 2
      </span>
      <button
        class="c2"
        data-testid="sub-menu-option-0"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          class="c3"
        >
          Option 2.1
        </span>
      </button>
      <button
        class="c2"
        data-testid="sub-menu-option-1"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <span
          class="c3"
        >
          Option 2.2
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu matches the snapshot (menu with icons) 1`] = `
<DocumentFragment>
  .c0 {
  background-color: #FFFFFF;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius);
  box-shadow: 0 8px 16px 0 rgb(0 0 0 / 0.2);
  box-sizing: border-box;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
  max-height: calc(var(--spacing-half) + 128px);
  overflow-y: auto;
  padding: var(--spacing-half) 0;
  -webkit-scroll-behavior: smooth;
  -moz-scroll-behavior: smooth;
  -ms-scroll-behavior: smooth;
  scroll-behavior: smooth;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  gap: var(--spacing-1x);
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
}

.c1.eds-util-focus-visible,
.c1:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c1:hover {
  background-color: #DBDEE1;
  color: #000000;
}

.c1[disabled],
.c1[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c2 {
  color: #1B1C1E;
}

.c2:hover {
  color: #000000;
}

.c3 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
    class="c0"
    data-testid="menu"
    id="00000000-0000-0000-0000-000000000000"
    role="menu"
  >
    <button
      class="c1 eds-util-focus-visible"
      data-testid="menu-option-0"
      role="menuitem"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-check c2"
        fill="none"
        focusable="false"
        height="1rem"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 6 9 17l-5-5"
        />
      </svg>
      <span
        class="c3"
      >
        Option 1
      </span>
    </button>
    <button
      class="c1"
      data-testid="menu-option-1"
      role="menuitem"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-settings c2"
        fill="none"
        focusable="false"
        height="1rem"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0 2.34 2.34 0 0 0 3.319 1.915 2.34 2.34 0 0 1 2.33 4.033 2.34 2.34 0 0 0 0 3.831 2.34 2.34 0 0 1-2.33 4.033 2.34 2.34 0 0 0-3.319 1.915 2.34 2.34 0 0 1-4.659 0 2.34 2.34 0 0 0-3.32-1.915 2.34 2.34 0 0 1-2.33-4.033 2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915"
        />
        <circle
          cx="12"
          cy="12"
          r="3"
        />
      </svg>
      <span
        class="c3"
      >
        Option 2
      </span>
    </button>
  </div>
</DocumentFragment>
`;
